<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--
  background image:
  <a href="https://www.freepik.com/free-vector/abstract-blue-background_859016.htm">
  Designed by Kjpargeter</a>
  - For both personal and commercial projects and to modify it.
  - In a website or presentation template or application or as part of your design
   -->

    <TextView
        android:id="@+id/history"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#f987c5"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingEnd="5dp"
        android:paddingRight="5dp"
        android:text="@string/history"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        />

    <ListView
        android:id="@+id/feel_list"
        android:layout_width="fill_parent"
        android:layout_height="235dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/hello"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingStart="5dp"
        android:paddingRight="5dp"
        android:paddingEnd="5dp"
        android:text="@string/comment" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="100">

        <EditText
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/max_len"
            android:inputType="textMultiLine"
            android:maxLength="100"
            android:padding="10dp"
            />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button_love"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_love"
            android:onClick="createFeeling"
            android:text="@string/love"
            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button_joy"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_joy"
            android:onClick="createFeeling"
            android:text="@string/joy"

            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button_surprise"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_surprise"
            android:onClick="createFeeling"
            android:paddingBottom="5dp"
            android:text="@string/surprise"

            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="48dp" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="7dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <Button
            android:id="@+id/button_sadness"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_sadness"
            android:onClick="createFeeling"
            android:text="@string/sadness"

            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="176dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/button_anger"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_anger"
            android:onClick="createFeeling"
            android:text="@string/anger"

            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />


        <Button
            android:id="@+id/button_fear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_fear"
            android:onClick="createFeeling"
            android:text="@string/fear"

            android:textColor="@android:color/black"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_stats"
        android:layout_width="match_parent"
        android:onClick="navStats"
        android:layout_height="35dp"
        android:background="@color/teal"
        android:text="@string/stats"
        android:textColor="@android:color/black" />


</LinearLayout>

